@startuml

class DataReader {
    DataReader(Stream<List<int>> stream)
    Future?<ReaderBuffer> readBuffer(int length)
}

class ReaderBuffer {
    int get payloadLength
    bool get isAllRead
    ReaderBuffer(List<DataChunk> chunks, int payloadLength)
    void skipByte()
    void skipBytes(int length)
    int checkOneLengthInteger()
    int readOneLengthInteger()
    int readFixedLengthInteger(int length)
    int readLengthEncodedInteger()
    String readFixedLengthString(int length)
    String readFixedLengthUTF8String(int length)
    String readLengthEncodedString()
    String readLengthEncodedUTF8String()
    String readNulTerminatedString()
    String readNulTerminatedUTF8String()
    String readRestOfPacketString()
    String readRestOfPacketUTF8String()
    DataRange readFixedLengthDataRange(int length)
    DataRange readLengthEncodedDataRange()
    DataRange readRestOfPacketDataRange()
    DataRange readNulTerminatedDataRange()
}

class DataChunk {
    bool get isEmpty
    int get length
    DataChunk(List<int> data, [int start = 0, int length])
    int checkOneByte()
    int extractOneByte()
    DataChunk extractDataChunk(int length)
    DataRange extractFixedLengthDataRange(int length)
    DataRange extractUpToDataRange(int terminator)
}

class DataRange {
    int get length
    bool get isPending
    DataRange(List<int> data, [int start = 0, int length])
    DataRange.pending(List<int> data, [int start = 0])
    DataRange.nil()
    DataRange.byte(int byte)
    void addExtraRange(DataRange extraRange)
    int toInt()
    String toString()
    String toUTF8String()
}

DataChunk ..> DataRange : create
ReaderBuffer ..> DataRange : uses
ReaderBuffer "_chunks" o--> "n" DataChunk
DataReader ..> DataChunk : create
DataReader ..> ReaderBuffer : create

@enduml